--- a/train.ipynb
+++ b/train.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -47,47 +47,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  5.00000000e+03   1.06500000e+01   1.62870000e+02   5.86332000e+03\n",
-      "    1.00000000e+01   1.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "    0.00000000e+00   0.00000000e+00   2.40000000e+04   1.00000000e+00\n",
-      "    0.00000000e+00   0.00000000e+00   1.00000000e+00   0.00000000e+00\n",
-      "    0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "    0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "    0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "    0.00000000e+00   2.76500000e+01   0.00000000e+00   1.00000000e+00\n",
-      "    6.90775628e+00   6.90775628e+00   3.00000000e+00   0.00000000e+00\n",
-      "    9.00000000e+00   0.00000000e+00   0.00000000e+00   5.86315519e+03]\n",
-      " [  2.50000000e+03   1.52700000e+01   5.98300000e+01   3.58980000e+03\n",
-      "    5.00000000e-01   1.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "    0.00000000e+00   0.00000000e+00   3.00000000e+04   0.00000000e+00\n",
-      "    1.00000000e+00   0.00000000e+00   0.00000000e+00   1.00000000e+00\n",
-      "    0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "    0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "    0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "    0.00000000e+00   1.00000000e+00   0.00000000e+00   5.00000000e+00\n",
-      "    6.90775628e+00   6.90775628e+00   3.00000000e+00   0.00000000e+00\n",
-      "    4.00000000e+00   0.00000000e+00   0.00000000e+00   1.01453000e+03]]\n",
-      "X_train: (1000, 39), y_train: (1000,)\n",
-      "X_test: (500, 39), y_test: (500,)\n"
+      "X_train: (1000, 38), y_train: (1000,)\n",
+      "X_test: (500, 38), y_test: (500,)\n"
      ]
     }
    ],
    "source": [
-    "print(features[0:2,:])\n",
-    "\n",
     "X_train, X_test, y_train, y_test = get_train_test_split(features)\n",
-    "\n",
-    "# Add bias terms\n",
-    "N_train, N_test = X_train.shape[0], X_test.shape[0]\n",
-    "X_train = np.hstack([np.ones([N_train, 1]), X_train])\n",
-    "X_test  = np.hstack([np.ones([N_test, 1]), X_test])\n",
     "\n",
     "# Temporarily use subset of data to debug faster\n",
     "# TODO: Remove\n",
     "X_train, y_train = X_train[:1000,:], y_train[:1000]\n",
     "X_test, y_test   = X_test[:500,:], y_test[:500]\n",
     "\n",
-    "# Scale to mean zero and unit variance\n",
+    "# Normalize\n",
     "scaler = MinMaxScaler()\n",
     "scaler.fit(X_train)\n",
     "X_train = scaler.transform(X_train)\n",
@@ -99,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -111,12 +84,51 @@
     "    mean_abs_err = np.mean(np.abs(pred - y))\n",
     "\n",
     "    print(\"Mean absolute error: %.3f\" % mean_abs_err)\n",
-    "    print(\"R^2 Score:           %.3f\" % score)"
+    "    print(\"R^2 Score:           %.3f\" % score)\n",
+    "\n",
+    "def lend_using_target_only(model, X, y, scaler, threshold=1.0):\n",
+    "    \"\"\"\n",
+    "    Simulate making loans with the trained model using only the target\n",
+    "    (the regressed total payment of the customer).\n",
+    "    If predicted total payment of customer is below (threshold * X[0]) \n",
+    "    (where X[0] is the loan amount), reject making the loan.\n",
+    "    \"\"\"\n",
+    "    loan_amount = scaler.inverse_transform(X)[:,0]\n",
+    "    satisfactory_payment = threshold * loan_amount\n",
+    "    regressed_total_payment = model.predict(X)\n",
+    "    loans_approved = regressed_total_payment > satisfactory_payment\n",
+    "    \n",
+    "    # Loaning to all\n",
+    "    loans_given_prev = np.sum(loan_amount[:]) / 1000\n",
+    "    payments_prev = np.sum(y) / 1000\n",
+    "    profits_prev = payments_prev - loans_given_prev\n",
+    "    profit_percentage_prev = profits_prev / loans_given_prev * 100\n",
+    "    \n",
+    "    # Loan according to model and threshold\n",
+    "    loans_given = np.sum(loan_amount[loans_approved]) / 1000\n",
+    "    payments = np.sum(y[loans_approved]) / 1000\n",
+    "    profits = payments - loans_given\n",
+    "    profit_percentage = profits / loans_given * 100\n",
+    "    \n",
+    "    print(\"\\n--- Without model ---\")\n",
+    "    print(\"Loans approved:    %d/%d\" % (X.shape[0], X.shape[0]))\n",
+    "    print(\"Loans given:       $ %.1f\" % loans_given_prev)\n",
+    "    print(\"Payments received: $ %.1f\\n\" % payments_prev)\n",
+    "    print(\"Profits:           $ %.1f\" % (profits_prev))\n",
+    "    print(\"Profit Percentage: %.1f%%\" % (profit_percentage_prev))\n",
+    "    \n",
+    "    print(\"\\n---- With model ----\")\n",
+    "    print(\"Loans approved:    %d/%d\" % (np.sum(loans_approved), X.shape[0]))\n",
+    "    print(\"Loans given:       $ %.1f\" % loans_given)\n",
+    "    print(\"Payments received: $ %.1f\\n\" % payments)\n",
+    "    print(\"Profits:           $ %.1f\" % (profits))\n",
+    "    print(\"Profit Percentage: %.1f%%\" % (profit_percentage))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -127,8 +139,8 @@
      "text": [
       "\n",
       "-- Linear Regression --\n",
-      "Mean absolute error: 1987.934\n",
-      "R^2 Score:           0.855\n",
+      "Mean absolute error: 1989.449\n",
+      "R^2 Score:           0.856\n",
       "\n",
       "-- Huber Regressor --\n",
       "Mean absolute error: 1716.457\n",
@@ -139,15 +151,15 @@
       "R^2 Score:           0.830\n",
       "\n",
       "-- Poly SVM 2 --\n",
-      "Mean absolute error: 2026.289\n",
+      "Mean absolute error: 2020.491\n",
       "R^2 Score:           0.821\n",
       "\n",
       "-- Poly SVM 5 --\n",
-      "Mean absolute error: 2396.635\n",
-      "R^2 Score:           0.772\n",
+      "Mean absolute error: 2378.822\n",
+      "R^2 Score:           0.773\n",
       "\n",
       "-- RBF SVM --\n",
-      "Mean absolute error: 1801.072\n",
+      "Mean absolute error: 1800.284\n",
       "R^2 Score:           0.830\n"
      ]
     }
@@ -191,6 +203,40 @@
     "svm_rbf = SVR(kernel=\"rbf\", C=1e4)\n",
     "svm_rbf.fit(X_train, y_train)\n",
     "evaluate_model(svm_rbf, X_test, y_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Without model ---\n",
+      "Loans approved:    500/500\n",
+      "Loans given:       $ 5408.2\n",
+      "Payments received: $ 5924.2\n",
+      "\n",
+      "Profits:           $ 516.0\n",
+      "Profit Percentage: 9.5%\n",
+      "\n",
+      "---- With model ----\n",
+      "Loans approved:    395/500\n",
+      "Loans given:       $ 4534.4\n",
+      "Payments received: $ 5179.5\n",
+      "\n",
+      "Profits:           $ 645.1\n",
+      "Profit Percentage: 14.2%\n"
+     ]
+    }
+   ],
+   "source": [
+    "lend_using_target_only(lin_reg, X_test, y_test, scaler, threshold=1.0)"
    ]
   }
  ],
