(F) Applied basic GP model and used the mean predictions to simulate loans

--- a/train.ipynb
+++ b/train.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -86,7 +86,14 @@
     "    print(\"Mean absolute error: %.3f\" % mean_abs_err)\n",
     "    print(\"R^2 Score:           %.3f\" % score)\n",
     "\n",
-    "def lend_using_target_only(model, X, y, scaler, threshold=1.0):\n",
+    "def print_loan_stats(num_loans, total_loans, loans_given, payments_rec, profits, profit_perc):\n",
+    "    print(\"Loans approved:    %d/%d\" % (num_loans, total_loans))\n",
+    "    print(\"Loans given:       $ %.1f\" % loans_given)\n",
+    "    print(\"Payments received: $ %.1f\\n\" % payments_rec)\n",
+    "    print(\"Profits:           $ %.1f\" % profits)\n",
+    "    print(\"Profit Percentage: %.1f%%\" % profit_perc)\n",
+    "    \n",
+    "def lend_using_target_only(regressed_payment, X, y, scaler, threshold=1.0):\n",
     "    \"\"\"\n",
     "    Simulate making loans with the trained model using only the target\n",
     "    (the regressed total payment of the customer).\n",
@@ -95,8 +102,7 @@
     "    \"\"\"\n",
     "    loan_amount = scaler.inverse_transform(X)[:,0]\n",
     "    satisfactory_payment = threshold * loan_amount\n",
-    "    regressed_total_payment = model.predict(X)\n",
-    "    loans_approved = regressed_total_payment > satisfactory_payment\n",
+    "    loans_approved = regressed_payment > satisfactory_payment\n",
     "    \n",
     "    # Loaning to all\n",
     "    loans_given_prev = np.sum(loan_amount[:]) / 1000\n",
@@ -111,24 +117,15 @@
     "    profit_percentage = profits / loans_given * 100\n",
     "    \n",
     "    print(\"\\n--- Without model ---\")\n",
-    "    print(\"Loans approved:    %d/%d\" % (X.shape[0], X.shape[0]))\n",
-    "    print(\"Loans given:       $ %.1f\" % loans_given_prev)\n",
-    "    print(\"Payments received: $ %.1f\\n\" % payments_prev)\n",
-    "    print(\"Profits:           $ %.1f\" % (profits_prev))\n",
-    "    print(\"Profit Percentage: %.1f%%\" % (profit_percentage_prev))\n",
+    "    print_loan_stats(X.shape[0], X.shape[0], loans_given_prev, payments_prev, profits_prev, profit_percentage_prev)\n",
     "    \n",
     "    print(\"\\n---- With model ----\")\n",
-    "    print(\"Loans approved:    %d/%d\" % (np.sum(loans_approved), X.shape[0]))\n",
-    "    print(\"Loans given:       $ %.1f\" % loans_given)\n",
-    "    print(\"Payments received: $ %.1f\\n\" % payments)\n",
-    "    print(\"Profits:           $ %.1f\" % (profits))\n",
-    "    print(\"Profit Percentage: %.1f%%\" % (profit_percentage))\n",
-    "    "
+    "    print_loan_stats(np.sum(loans_approved), X.shape[0], loans_given, payments, profits, profit_percentage)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -216,6 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(500,)\n",
       "\n",
       "--- Without model ---\n",
       "Loans approved:    500/500\n",
@@ -236,7 +234,69 @@
     }
    ],
    "source": [
-    "lend_using_target_only(lin_reg, X_test, y_test, scaler, threshold=1.0)"
+    "# Simulate making loans only to those who can pay back threshold times of original amount\n",
+    "regressed_payment = lin_reg.predict(X_test)\n",
+    "lend_using_target_only(regressed_payment, X_test, y_test, scaler, threshold=1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Gaussian Process\n",
+    "import GPy\n",
+    "\n",
+    "# Normalize\n",
+    "y_scaler = MinMaxScaler()\n",
+    "y_scaler.fit(y_train.reshape(-1,1))\n",
+    "y_train_scaled = y_scaler.transform(y_train.reshape(-1,1))\n",
+    "\n",
+    "# Initialize GP Model\n",
+    "kernel = GPy.kern.RBF(input_dim=X_train.shape[1], variance=1., lengthscale=1.)\n",
+    "gp_model = GPy.models.GPRegression(X_train, y_train_scaled, kernel)\n",
+    "gp_model.optimize()\n",
+    "\n",
+    "y_hat, conf = gp_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "--- Without model ---\n",
+      "Loans approved:    500/500\n",
+      "Loans given:       $ 5408.2\n",
+      "Payments received: $ 5924.2\n",
+      "\n",
+      "Profits:           $ 516.0\n",
+      "Profit Percentage: 9.5%\n",
+      "\n",
+      "---- With model ----\n",
+      "Loans approved:    387/500\n",
+      "Loans given:       $ 4387.3\n",
+      "Payments received: $ 5011.0\n",
+      "\n",
+      "Profits:           $ 623.7\n",
+      "Profit Percentage: 14.2%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simulate making loans only to those who can pay back threshold times of original amount\n",
+    "regressed_payment = y_scaler.inverse_transform(y_hat).reshape(-1)\n",
+    "lend_using_target_only(regressed_payment, X_test, y_test, scaler, threshold=1.0)"
    ]
   }
  ],
