(Refactor) Moved evaluation code to a new file

--- a/train.ipynb
+++ b/train.ipynb
@@ -10,7 +10,8 @@
    "source": [
     "import numpy as np\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from data import load_dataset, get_train_test_split"
+    "from data import load_dataset, get_train_test_split\n",
+    "from evaluation import evaluate_model, lend_using_target_only"
    ]
   },
   {
@@ -72,60 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def evaluate_model(model, X, y):\n",
-    "    pred = model.predict(X)\n",
-    "    score = model.score(X, y)\n",
-    "    mean_abs_err = np.mean(np.abs(pred - y))\n",
-    "\n",
-    "    print(\"Mean absolute error: %.3f\" % mean_abs_err)\n",
-    "    print(\"R^2 Score:           %.3f\" % score)\n",
-    "\n",
-    "def print_loan_stats(num_loans, total_loans, loans_given, payments_rec, profits, profit_perc):\n",
-    "    print(\"Loans approved:    %d/%d\" % (num_loans, total_loans))\n",
-    "    print(\"Loans given:       $ %.1f\" % loans_given)\n",
-    "    print(\"Payments received: $ %.1f\\n\" % payments_rec)\n",
-    "    print(\"Profits:           $ %.1f\" % profits)\n",
-    "    print(\"Profit Percentage: %.1f%%\" % profit_perc)\n",
-    "    \n",
-    "def lend_using_target_only(regressed_payment, X, y, scaler, threshold=1.0):\n",
-    "    \"\"\"\n",
-    "    Simulate making loans with the trained model using only the target\n",
-    "    (the regressed total payment of the customer).\n",
-    "    If predicted total payment of customer is below (threshold * X[0]) \n",
-    "    (where X[0] is the loan amount), reject making the loan.\n",
-    "    \"\"\"\n",
-    "    loan_amount = scaler.inverse_transform(X)[:,0]\n",
-    "    satisfactory_payment = threshold * loan_amount\n",
-    "    loans_approved = regressed_payment > satisfactory_payment\n",
-    "    \n",
-    "    # Loaning to all\n",
-    "    loans_given_prev = np.sum(loan_amount[:]) / 1000\n",
-    "    payments_prev = np.sum(y) / 1000\n",
-    "    profits_prev = payments_prev - loans_given_prev\n",
-    "    profit_percentage_prev = profits_prev / loans_given_prev * 100\n",
-    "    \n",
-    "    # Loan according to model and threshold\n",
-    "    loans_given = np.sum(loan_amount[loans_approved]) / 1000\n",
-    "    payments = np.sum(y[loans_approved]) / 1000\n",
-    "    profits = payments - loans_given\n",
-    "    profit_percentage = profits / loans_given * 100\n",
-    "    \n",
-    "    print(\"\\n--- Without model ---\")\n",
-    "    print_loan_stats(X.shape[0], X.shape[0], loans_given_prev, payments_prev, profits_prev, profit_percentage_prev)\n",
-    "    \n",
-    "    print(\"\\n---- With model ----\")\n",
-    "    print_loan_stats(np.sum(loans_approved), X.shape[0], loans_given, payments, profits, profit_percentage)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +84,7 @@
      "text": [
       "\n",
       "-- Linear Regression --\n",
-      "Mean absolute error: 1989.449\n",
+      "Mean absolute error: 1992.007\n",
       "R^2 Score:           0.856\n",
       "\n",
       "-- Huber Regressor --\n",
@@ -204,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -213,7 +161,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(500,)\n",
       "\n",
       "--- Without model ---\n",
       "Loans approved:    500/500\n",
@@ -224,11 +171,11 @@
       "Profit Percentage: 9.5%\n",
       "\n",
       "---- With model ----\n",
-      "Loans approved:    395/500\n",
-      "Loans given:       $ 4534.4\n",
-      "Payments received: $ 5179.5\n",
+      "Loans approved:    392/500\n",
+      "Loans given:       $ 4516.9\n",
+      "Payments received: $ 5159.8\n",
       "\n",
-      "Profits:           $ 645.1\n",
+      "Profits:           $ 642.9\n",
       "Profit Percentage: 14.2%\n"
      ]
     }
@@ -241,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -265,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
