created interest_threshold_optimizer renamed folder 'data' to 'dataset' and updated references in code

--- a/train.ipynb
+++ b/train.ipynb
@@ -32,27 +32,18 @@
     }
    ],
    "source": [
-    "filename = \"data/LoanStats3a.csv\"\n",
+    "filename = \"dataset/LoanStats3a.csv\"\n",
     "features, data = load_dataset(filename)\n",
     "print(\"Data shape: %s\" % str(features.shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X_train: (1000, 38), y_train: (1000,)\n",
-      "X_test: (500, 38), y_test: (500,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train, X_test, y_train, y_test = get_train_test_split(features)\n",
     "\n",
@@ -152,34 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "--- Without model ---\n",
-      "Loans approved:    500/500\n",
-      "Loans given:       $ 5408.2\n",
-      "Payments received: $ 5924.2\n",
-      "\n",
-      "Profits:           $ 516.0\n",
-      "Profit Percentage: 9.5%\n",
-      "\n",
-      "---- With model ----\n",
-      "Loans approved:    392/500\n",
-      "Loans given:       $ 4516.9\n",
-      "Payments received: $ 5159.8\n",
-      "\n",
-      "Profits:           $ 642.9\n",
-      "Profit Percentage: 14.2%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simulate making loans only to those who can pay back threshold times of original amount\n",
     "regressed_payment = lin_reg.predict(X_test)\n",
@@ -188,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
